<resources>
    <string name="app_name">Trivia</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="please_enter_u_r_name">Please enter u r name</string>
    <string name="who_is_the_best_cricketer_in_the_world">Who is the best cricketer in the world?</string>
    <string name="finish">FINISH</string>
    <string name="history">HISTORY</string>
    <string name="sachin_tendulkar">Sachin Tendulkar</string>
    <string name="virat_kolli">Virat Kolli</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>