<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.QuestionTwoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/question_two_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="What are the colors in the Indian national flag?"
            android:textSize="20dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_two_label"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/white" />

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/yellow" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/orange" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/green" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/next"
        android:background="@color/black"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAllCaps="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>