<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:gravity="center"
        tools:context=".fragments.NameFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/what_is_your_name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/name_question"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:hint="@string/please_enter_u_r_name"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/next"
        android:textColor="@color/black"
        android:gravity="center"
        android:textAllCaps="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>
